--- a/sync-hooks-waves/06-waves-and-hooks/smoke-tests.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/smoke-tests.yml
@@ -6,6 +6,7 @@ metadata:
   labels:
     codefresh.io/cert: smoke-job  
   annotations:
+    argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/sync-wave: "10" 
 spec:
   template:
